[project]
name = "korvax"
version = "0.1.0"
description = "Audio DSP and ML with JAX"
readme = "README.md"
authors = [
    { name = "David Marttila", email = "david.suedholt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.13.2",
    "jax>=0.6.2",
]

[project.scripts]
korvax = "korvax:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
]
dev = [
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.2",
]
