[project]
name = "korvax"
version = "0.1.0"
description = "Audio DSP and ML with JAX"
readme = "README.md"
authors = [
    { name = "David Marttila", email = "david.suedholt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.13.2",
    "jax>=0.6.2",
    "onnx2eqx",
]

[project.scripts]
korvax = "korvax:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
]
cuda13 = [
    "jax[cuda13]>=0.7.2 ; sys_platform == 'linux'",
]
test = [
    "pytest>=8.4.2",
    "torchcrepe>=0.0.24",
]
dev = [
    {include-group = "test"},
    "click>=8.3.0",
    "matplotlib>=3.10.7",
    "onnx>=1.19.1",
    "onnxscript>=0.5.3",
    "pre-commit>=4.3.0",
    "torchvision>=0.23.0",
]

[tool.uv.dependency-groups]
cuda13 = {requires-python = ">=3.11"}

[tool.uv.sources]
onnx2eqx = { git = "ssh://git@github.com/dsuedholt/onnx2eqx.git" }
